# creature-creator-prototype

./: .gitignore  Cargo.toml  build.rs
character_designer_designer_rs_prototype/character_designer_designer_rs_prototype.xcodeproj/: project.pbxproj
creature-creator/: Cargo.toml
creature-creator-metal-renderer/: .gitignore  Cargo.toml  build.rs
creature-creator-metal-renderer/src/: lib.rs  renderer.rs  shared.rs  uniforms.rs
creature-creator-metal-renderer/src/geometry/: plane.rs
creature-creator-metal-renderer/src/lines/: line_shader.metallib  lines.rs  mod.rs  pipeline.rs
creature-creator-metal-renderer/src/surfaces/: .gitignore  mod.rs  pipeline.rs  sphere_shader.metal  sphere_shader.metallib
creature-creator-metal-renderer/src/surfaces/sampling/: buffer_allocator.rs  initial_sampling.rs  live_sampling.rs  mod.rs  primitives.rs  surface.rs
creature-creator-metal-renderer/src/surfaces/sampling/spatial_indexer/: kd_indexer.rs
creature-creator-renderer/: Cargo.toml
creature-creator-renderer/src/: camera.rs  graph.rs  lib.rs  lines.rs  shapes.rs  transform.rs
creature-creator-swift/creature-creator-swift/: ContentView.swift  creature-creator-swift-Bridging-Header.h  creature_creator_swiftApp.swift
creature-creator-swift/creature-creator-swift.xcodeproj/: project.pbxproj
creature-creator/src/: app.rs  bones.rs  main.rs
src/: app.rs  bones.rs  buffer_allocator.rs  kdtree.rs  main.rs  particle_system.rs  particles.rs  plane.rs  pool.rs  relaxation.rs  renderer.rs  sampling.rs  shader.metal  stick_man.rs  surfaces.rs
src/geometry/: mod.rs
src/renderer/: graph.rs  mod.rs  shader.metal  shared.rs  sphere_pass.rs  sphere_pipeline.rs  sphere_shader.metal  strokes.rs  uniforms.rs  widget_pipeline.rs  widget_shader.metal
src/renderer/lines/: line_shader.metal  mod.rs  pipeline.rs
src/renderer/surfaces/: mod.rs  (+1 more)
src/spatial_indexer/: kd_indexer.rs  mod.rs
src/stick_man/: limb_store.rs  mod.rs
src/surfaces/: body.rs  initial_sampling.rs  limb.rs  live_sampling.rs  mod.rs  primitives.rs
(+14 files in other folders)
