[package]
name = "character_designer_designer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.0"


#winit = "0.28"
#env_logger = "0.10"
#log = "0.4"
#wgpu = "0.17"