[package]
name = "creature_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.0"

winit = "0.29.2"

# Metal deps:
metal = "0.26.0"
cocoa = "0.25.0"
core-graphics-types = "0.1"