[package]
name = "creature-creator-metal-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
creature-creator-renderer = { path = "../creature-creator-renderer"}

nalgebra = "0.32.3"

rand = "0.8.5"

winit = "0.29.2"

# Metal deps:
metal = "0.27.0"
cocoa = "0.25.0"
core-graphics-types = "0.1"

