[package]
name = "creature-creator-metal-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
creature-creator-renderer = { path = "../creature-creator-renderer"}

swift-bridge = "0.1"

nalgebra = "0.32.3"

rand = "0.8.5"

raw-window-handle = "0.6.0"

# Metal deps:
metal = "0.27.0"
cocoa = "0.25.0"
core-graphics-types = "0.1"
